--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -18,7 +18,7 @@
   <!--  ************** MAIN *****************  -->
 
     <main class="container container-b"> 
-        <form class="container" action="#" method="post">
+        <form class="container" action="" method="post">
             <h1 class="main-article">EDITAR ITEM</h1>
             <article class="main-article">
                 <label for="categoria">Categoría:</label>
