[FIX] Link en botón shop del hero en index, corregido.

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,7 +19,7 @@
             <!-- La imagen de fondo la pondremos como background con CSS -->
             <h3 class="hero-title">Nuevos Ingresos</h3>
             <p class="hero-text">Descubrí el próximo Funko Pop de tu colección</p>
-            <a class="hero-link" href="./pages/shop/shop.html">SHOP</a>
+            <a class="hero-link" href="/shop">SHOP</a>
         </article>
     </section>
     
