[FIX] Correción en otros links de home.

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Funkoshop</title>
-    <link rel="stylesheet" href="./css/item_shop.css">
-    <link rel="stylesheet" href="./css/Normalizacioncss.css">
+    <link rel="stylesheet" href="/css/item_shop.css">
+    <link rel="stylesheet" href="/css/Normalizacioncss.css">
 </head>
 <body>
     <!--  ************* HEADER ****************  -->
@@ -30,10 +30,10 @@
             <article class="index-collection-content index-collection-star-wars">
                 <h3 class="index-collection-title">Star Wars & The Mandalorian</h3>
                 <p class="index-collection-text">Disfruta de una saga que sigue agregando personajes a su colección.</p>
-                <a class="index-collection-link" href="./pages/shop/shop.html">VER COLECCIÓN</a>
+                <a class="index-collection-link" href="/shop">VER COLECCIÓN</a>
             </article>
             <picture class="index-collection-cover">
-                <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura Funko coleccionable de Grogu perteneciente a la serie The Mandalorian">
+                <img src="/img/star-wars/baby-yoda-1.webp" alt="Figura Funko coleccionable de Grogu perteneciente a la serie The Mandalorian">
             </picture>
         </section>
         <!-- El orden entre el article y la picture se cambiará mediante CSS. -->        
@@ -41,10 +41,10 @@
             <article class="index-collection-content">
                 <h3 class="index-collection-title">POKEMON INDIGO</h3>
                 <p class="index-collection-text">Atrapa todos los que puedas y disfruta de una colección llena de amigos.</p>
-                <a class="index-collection-link" href="./pages/shop/shop.html">VER COLECCIÓN</a>
+                <a class="index-collection-link" href="/shop">VER COLECCIÓN</a>
             </article>
             <picture class="index-collection-cover">
-                <img src="./img/pokemon/vulpix-1.webp" alt="Figura Funko coleccionable de Vulpix perteneciente a la serie Pokemon">
+                <img src="/img/pokemon/vulpix-1.webp" alt="Figura Funko coleccionable de Vulpix perteneciente a la serie Pokemon">
             </picture>
         </section>
 
@@ -52,10 +52,10 @@
             <article class="index-collection-content index-collection-harry-potter">
                 <h3 class="index-collection-title">HARRY POTTER</h3><!-- h3 por ser el título de un article que está dentro de un section -->
                 <p class="index-collection-text">Revive los recuerdos de una saga llena de magia y encanto.</p>
-                <a class="index-collection-link" href="./pages/shop/shop.html">VER COLECCIÓN</a>
+                <a class="index-collection-link" href="/shop">VER COLECCIÓN</a>
             </article>
             <picture class="index-collection-cover">
-                <img src="./img/harry-potter/snape-patronus-1.webp" alt="Figura Funko coleccionable del Patronus de Snape de la película de Harry Potter">
+                <img src="/img/harry-potter/snape-patronus-1.webp" alt="Figura Funko coleccionable del Patronus de Snape de la película de Harry Potter">
             </picture>
         </section>
 
@@ -67,11 +67,11 @@
             <ul class="slider-items glide__slides">
                 <li class="slider-item glide__slide">
                     <article  class="card-item">
-                        <a class="card-item-link" href="./pages/shop/item.html">
+                        <a class="card-item-link" href="/shop/item/4">
                             <picture class="card-item-cover">
                                 <span class="card-item-tag">Nuevo</span>
-                                <img class="card-item-img--front" src="./img/star-wars/trooper-1.webp" alt="Figura Funko coleccionable de Stormtrooper de Star Wars">
-                                <img class="card-item-img--back" src="./img/star-wars/trooper-box.webp" alt="Figura Funko coleccionable de Stormtrooper de Star Wars en caja">
+                                <img class="card-item-img--front" src="/img/star-wars/trooper-1.webp" alt="Figura Funko coleccionable de Stormtrooper de Star Wars">
+                                <img class="card-item-img--back" src="/img/star-wars/trooper-box.webp" alt="Figura Funko coleccionable de Stormtrooper de Star Wars en caja">
                             </picture>
                             <div class="card-item-content">
                                 <p class="card-item-licence">STAR WARS</p>
@@ -84,11 +84,11 @@
                 </li>
                 <li class="slider-item glide__slide">
                     <article class="card-item">
-                        <a class="card-item-link" href="./pages/shop/item.html">
+                        <a class="card-item-link" href="/shop/item/7">
                             <picture class="card-item-cover">
                                 <span class="card-item-tag">Nuevo</span>
-                                <img class="card-item-img--front" src="./img/pokemon/pidgeotto-1.webp" alt="Figura Funko coleccionable de Pidgeotto perteneciente a la serie Pokemon">
-                                <img class="card-item-img--back" src="./img/pokemon/pidgeotto-box.webp" alt="Figura Funko coleccionable de Pidgeotto perteneciente a la serie Pokemon en caja">
+                                <img class="card-item-img--front" src="/img/pokemon/pidgeotto-1.webp" alt="Figura Funko coleccionable de Pidgeotto perteneciente a la serie Pokemon">
+                                <img class="card-item-img--back" src="/img/pokemon/pidgeotto-box.webp" alt="Figura Funko coleccionable de Pidgeotto perteneciente a la serie Pokemon en caja">
                             </picture>
                             <div class="card-item-content">
                                 <p class="card-item-licence">POKEMON</p>
@@ -101,11 +101,11 @@
                 </li>
                 <li class="slider-item glide__slide">
                     <article class="card-item">
-                        <a class="card-item-link" href="./pages/shop/item.html">
+                        <a class="card-item-link" href="/shop/item/12">
                             <picture class="card-item-cover">
                                 <span class="card-item-tag">Nuevo</span>
-                                <img class="card-item-img--front" src="./img/harry-potter/luna-1.webp" alt="Figura Funko coleccionable de Luna Lovegood Lion Mask de la película de Harry Potter">
-                                <img class="card-item-img--back" src="./img/harry-potter/luna-box.webp" alt="Figura Funko coleccionable de Luna Lovegood Lion Mask de la película de Harry Potter en caja">
+                                <img class="card-item-img--front" src="/img/harry-potter/luna-1.webp" alt="Figura Funko coleccionable de Luna Lovegood Lion Mask de la película de Harry Potter">
+                                <img class="card-item-img--back" src="/img/harry-potter/luna-box.webp" alt="Figura Funko coleccionable de Luna Lovegood Lion Mask de la película de Harry Potter en caja">
                             </picture>
                             <div class="card-item-content">
                                 <p class="card-item-licence">HARRY POTTER</p>
