[FEAT] Se agrega multer, pudiendo subir UNA imagen.
Solo subo una imagen. Cambiarlo para que suba varias es trivial.
El subir esta imagen se hace desde la vista admin/create.ejs.

 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	modified:   .gitignore
	modified:   package-lock.json
	modified:   package.json
	modified:   src/controllers/adminController.js
	modified:   src/routes/adminRoutes.js
	modified:   src/views/admin/create.ejs
	modified:   src/views/shop/cart.ejs

--- a/src/views/admin/create.ejs
+++ b/src/views/admin/create.ejs
@@ -18,7 +18,8 @@
   <!--  ************** MAIN *****************  -->
 
     <main class="container create container-b"> 
-        <form class="container" action="/admin/create" method="POST">
+        <form class="container" action="/admin/create" method="POST" enctype="multipart/form-data">
+            <!-- enctype="multipart/form-data" -->
             <h1 class="main-article">CREAR NUEVO ITEM</h1>
             <article class="main-article">
                 <label for="categoria">Categoría:</label>
@@ -71,9 +72,9 @@
             
             <article class="main-article">
                 <label class="form-label">Imágenes:</label>
-                <input type="file" id="imagenes" name="imagenes" multiple>
-                <input type="hidden" id="imagen_front" name="image_front" multiple> <!-- PROBANDO -->
-                <input type="hidden" id="imagen_back" name="image_back" multiple> <!-- PROBANDO -->
+                <input type="file" id="imagenes" name="imagenes" > <!-- multiple -->
+                <!-- <input type="hidden" id="imagen_front" name="image_front">  PROBANDO -->
+                <!-- <input type="hidden" id="imagen_back" name="image_back">  PROBANDO -->
              </article>
             
             
