--- a/src/views/shop/cart.ejs
+++ b/src/views/shop/cart.ejs
@@ -11,8 +11,8 @@
     
     <!-- Estilos -->    
     
-    <link rel="stylesheet" href="../../css/Normalizacioncss.css">
-    <link rel="stylesheet" href="../../css/cart.css">
+    <link rel="stylesheet" href="/css/Normalizacioncss.css">
+    <link rel="stylesheet" href="/css/cart.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
 
@@ -65,7 +65,7 @@
                     <tr class="cart-head">
                         <td>
                             <picture>
-                                <img class="logo-prod" src="../../img/star-wars/baby-yoda-1.webp"
+                                <img class="logo-prod" src="/img/star-wars/baby-yoda-1.webp"
                                     alt="Figura Funko coleccionable de Grogu perteneciente a la serie The Mandalorian">
                             </picture>
                         </td>
@@ -89,14 +89,14 @@
                         </td>
                         <td>
                             <a href="">
-                                <img class="eliminar-cart" src="../../img/icons/cross-circled.svg" alt="icono de circulo tachado">
+                                <img class="eliminar-cart" src="/img/icons/cross-circled.svg" alt="icono de circulo tachado">
                             </a>
                         </td>
                     </tr>
                     <tr class="cart-head">
                         <td>
                             <picture>
-                                <img class="logo-prod" src="../../img/pokemon/pidgeotto-1.webp"
+                                <img class="logo-prod" src="/img/pokemon/pidgeotto-1.webp"
                                     alt="Figura Funko coleccionable de un Pidgeotto">
                             </picture>
                         </td>
@@ -119,7 +119,7 @@
                         </td>
                         <td>
                             <a href="">
-                                <img class="eliminar-cart" src="../../img/icons/cross-circled.svg" alt="icono de circulo tachado">
+                                <img class="eliminar-cart" src="/img/icons/cross-circled.svg" alt="icono de circulo tachado">
                             </a>
                         </td>
                     </tr>
@@ -181,8 +181,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-    <script src="../../js/btns-item.js"></script>
-    <script src="../../js/glide.js"></script>
+    <script src="/js/btns-item.js"></script>
+    <script src="/js/glide.js"></script>
 </body>
 
 </html>
